Fix navigation issue on Safari

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -28,7 +28,7 @@
 
   &__item {
     display: flex;
-    position: relative;
+    height: 100%;
     text-transform: uppercase;
     width: 100%;
   }
